password field added sale data

--- a/templates/views/admin/salesData/addNew.hbs
+++ b/templates/views/admin/salesData/addNew.hbs
@@ -104,6 +104,7 @@
                                 <tr>
                                     <th scope="col">Machine_Name</th>
                                     <th scope="col">Serial_No.</th>
+                                    <th scope="col">Password</th>
                                     <th scope="col" style="width: 6em;">Wty</th>
                                     <th scope="col" style="width: 10em;"></th>
                                     <th scope="col">From</th>
@@ -120,6 +121,10 @@
                                     <td>
                                         <input autocomplete="off" type="text" class="form-control shadow-none mx-1"
                                             required name="machineNum" aria-describedby="helpId" placeholder="machine sno">
+                                    </td>
+                                     <td>
+                                        <input autocomplete="off" type="text" class="form-control shadow-none mx-1"
+                                            required name="password" aria-describedby="helpId" placeholder="password">
                                     </td>
                                     <td>
                                         <input autocomplete="off" type="number"
