--- a/templates/views/admin/salesData/salesData.hbs
+++ b/templates/views/admin/salesData/salesData.hbs
@@ -58,7 +58,7 @@
             <th>Invoice date</th>
             <th>Invoice Num</th>
             <th>Customer Name</th>
-            <th colspan="4">Parts</th>
+            <th colspan="4">Machines</th>
         </thead>
         <tbody>
         </tbody>
@@ -257,6 +257,7 @@
                             <tr>
                                 <th scope="col">Machine_Name</th>
                                 <th scope="col">Serial_No.</th>
+                                <th scope="col">Password</th>
                                 <th scope="col">From</th>
                                 <th scope="col">Till</th>
                             </tr>
