parts sale data password field added

--- a/templates/views/admin/salesData/parts/addNewSalesPart.hbs
+++ b/templates/views/admin/salesData/parts/addNewSalesPart.hbs
@@ -106,6 +106,7 @@
                                 <tr>
                                     <th scope="col">Part_Name</th>
                                     <th scope="col">Serial_No.</th>
+                                    <th scope="col">Password</th>
                                     <th scope="col">Wty</th>
                                     <th scope="col"></th>
                                     <th scope="col">From</th>
@@ -122,6 +123,10 @@
                                     <td>
                                         <input autocomplete="off" type="text" class="form-control shadow-none mx-1"
                                             required name="partNumber" aria-describedby="helpId" placeholder="part sno">
+                                    </td>
+                                    <td>
+                                        <input autocomplete="off" type="text" class="form-control shadow-none mx-1"
+                                            required name="password" aria-describedby="helpId" placeholder="password">
                                     </td>
                                     <td>
                                         <input autocomplete="off" type="number" class="form-control shadow-none mx-1 warranty-input"
