--- a/templates/views/admin/salesData/parts/allSalesPart.hbs
+++ b/templates/views/admin/salesData/parts/allSalesPart.hbs
@@ -235,6 +235,7 @@
                             <tr>
                                 <th scope="col">Part_Name</th>
                                 <th scope="col">Serial_No.</th>
+                                <th scope="col">Password</th>
                                 <th scope="col">From</th>
                                 <th scope="col">Till</th>
                             </tr>
