--- a/templates/views/user/complaints/newComplaints.hbs
+++ b/templates/views/user/complaints/newComplaints.hbs
@@ -58,7 +58,7 @@
         <fieldset>
             <legend><span class="number">2</span>Your problem</legend>
             <label for="name">Seriel Number: </label>
-            <input type="number" id="name" name="MserielNumber" placeholder="seriel Number" required>
+            <input type="text" id="name" name="MserielNumber" placeholder="seriel Number" required>
             <label for="name">Machine name: </label>
             <input type="text" id="name" name="machineName" placeholder="machine name" required>
 
