--- a/templates/views/admin/vouchers/delivery-order/create-new.hbs
+++ b/templates/views/admin/vouchers/delivery-order/create-new.hbs
@@ -396,14 +396,14 @@
         <div class="submit-container d-flex justify-content-end ps-3 align-items-center"
             style="position: fixed;bottom:1em;right:1em;">
             <span class="error display-5 mx-3"></span>
-            <button class="btn bg-base-color text-light shadow-none" type="button"
-                data-toggle="tooltip" data-placement="top" title="Print and submit" onclick="submitForm('print')">
-                <i class="bi bi-printer mx-1"></i></button>
+            {{!-- <button class="btn bg-base-color text-light shadow-none" type="button" onclick="submitForm('print',)"
+                data-toggle="tooltip" data-placement="top" title="Print and submit">
+                <i class="bi bi-printer mx-1"></i></button> --}}
             <button class="btn bg-base-color text-light mx-2 shadow-none"
                 onclick="window.location.href ='/vitco-impex/vouchers/delivery-order/view-all'" type="button" data-toggle="tooltip" data-placement="top" title="View all">
                 <i class="bi bi-eye mx-1"></i></button>
             <button style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;"
-                class="btn bg-base-color text-light shadow-none" type="button" onclick="submitForm('submit')">Submit</button>
+                class="btn bg-base-color text-light shadow-none" type="submit">Submit</button>
         </div>
     </form>
 </div>
