--- a/templates/views/admin/salesData/parts/allSalesPart.hbs
+++ b/templates/views/admin/salesData/parts/allSalesPart.hbs
@@ -259,7 +259,7 @@
                     class='btn btn-info shadow-none mt-3 mx-2 submit-changes-sales-report-machine-details-btn hide'
                     onclick='applyChangeSaleData()'>Apply Changes</button>
                 {{/ifeq}}
-                {{#ifeq this.permissionName "salesData"}}
+                {{#ifeq this.permissionName "partSalesData"}}
                 {{#each this.permissionKeys}}
                 {{#ifeq this.keyName "edit"}}
                 <button
