--- a/templates/views/admin/qrCode/view-all.hbs
+++ b/templates/views/admin/qrCode/view-all.hbs
@@ -230,7 +230,7 @@
     </div>
 </div>
 
-<!-- all qr codes -->
+<!-- All QR codes -->
 <div class="modal" id="allQrCodesModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
