service report add new error resolved

--- a/templates/partials/adminHeader.hbs
+++ b/templates/partials/adminHeader.hbs
@@ -796,14 +796,16 @@
                                 <a class="nav-link dropdown-toggle hide-arrow"
                                     onclick="$('.admin-profile-dropdown').toggleClass('hide')">
                                     <div class="avatar avatar-online">
-                                        {{#if admin.profilePhoto}}
+                                        <img src="/images/avatar/boy-avatar.png" class="img-rounded"
+                                            style="object-fit: cover;" />
+                                        {{!-- {{#if admin.profilePhoto}}
                                         <img src="{{admin.profilePhoto}}" class="img-rounded"
                                             style="object-fit: cover;" />
                                         {{else}}
 
                                         <img src="/images/avatar/boy-avatar.png" class="img-rounded"
                                             style="object-fit: cover;" />
-                                        {{/if}}
+                                        {{/if}} --}}
                                     </div>
                                 </a>
                                 <ul class="admin-profile-dropdown hide shadow">
@@ -812,14 +814,16 @@
                                             <div class="d-flex">
                                                 <div class="flex-shrink-0 me-3">
                                                     <div class="avatar avatar-online">
-                                                        {{#if admin.profilePhoto}}
+                                                        <img src="/images/avatar/boy-avatar.png" class="img-rounded"
+                                            style="object-fit: cover;" />
+                                                        {{!-- {{#if admin.profilePhoto}}
                                                         <img src="{{admin.profilePhoto}}" class="img-rounded"
                                                             style="object-fit: cover;" />
                                                         {{else}}
 
                                                         <img src="/images/avatar/boy-avatar.png" class="img-rounded"
                                                             style="object-fit: cover;" />
-                                                        {{/if}}
+                                                        {{/if}} --}}
                                                     </div>
                                                 </div>
                                                 <div class="flex-grow-1">
